<resources>
    <string name="app_name">MyNBA</string>
    <string name="standings">Standings</string>
    <string name="home_team_logo" translatable="false">Home Team Logo</string>
    <string name="away_team_logo" translatable="false">Away Team Logo</string>
    <string name="western_conference">Western Conference</string>
    <string name="eastern_conference">Eastern Conference</string>
    <!-- Strings used for fragments for navigation -->

    <string name="news_image">News Image</string>
    <string name="confWest" translatable="false">Western</string>
    <string name="confEast" translatable="false">Eastern</string>
    <string name="send_comment">Send Comment</string>
    <string name="image" translatable="false">Image</string>
    <string name="starters">Starters</string>
    <string name="min" translatable="false">MIN</string>
    <string name="pts" translatable="false">PTS</string>
    <string name="reb" translatable="false">REB</string>
    <string name="ast">AST</string>
    <string name="stl" translatable="false">STL</string>
    <string name="blk" translatable="false">BLK</string>
    <string name="profile">Profile</string>
    <string name="signout">Sign Out</string>
    <string name="textview" translatable="false">textView</string>
    <string name="comment">comment</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="signup">Signup</string>
    <string name="username">Username</string>
    <string name="update">Update</string>
    <string name="e_mail">E-mail</string>
    <string name="favorite_team">Favorite Team</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="w_l">W-L</string>
    <string name="pct">PCT</string>
    <string name="strk">STRK</string>
    <string name="gb">GB</string>
    <string name="video_image">Video Image</string>

    <string-array name="teams">
        <item>Golden State Warriors</item>
        <item>Phoenix Suns</item>
        <item>Washington Wizards</item>
        <item>Brooklyn Nets</item>
        <item>Chicago Bulls</item>
        <item>Miami Heat</item>
        <item>Dallas Mavericks</item>
        <item>Denver Nuggets</item>
        <item>Los Angels Clippers</item>
        <item>Utah Jazz</item>
        <item>Charlotte Hornets</item>
        <item>Cleveland Cavaliers</item>
        <item>New York Knicks</item>
        <item>Philadelphia 76ers</item>
        <item>Memphis Grizzlies</item>
        <item>Los Angles Lakers</item>
        <item>Portland Trail Blazers</item>
        <item>Boston Celtics</item>
        <item>Milwaukee Bucks</item>
        <item>Toronto Raptors</item>
        <item>Atlanta Hawks</item>
        <item>Oklahoma City Thunder</item>
        <item>Sacramento Kings</item>
        <item>Indiana Pacers</item>
        <item>Minnesota Timberwolves</item>
        <item>Detroit Pistons</item>
        <item>San Antonio Spurs</item>
        <item>Orlando Magic</item>
        <item>New Orleans Pelicans</item>
        <item>Houston Rockets</item>
    </string-array>
    <string name="news">News</string>
    <string name="games">Games</string>
    <string name="status">Status</string>
    <string name="boxScore">Box Score</string>
    <string name="discuss">Discuss</string>
    <string name="highlights" translatable="false">Highlights</string>
    <string name="fileduser">Failed To Create User</string>
    <string name="registerSucess">User Registered Success</string>
    <string name="filedRegister">Failed to Register User info</string>
    <string name="logged">Logged In</string>
    <string name="bench">Bench  </string>
    <string name="hide_score">Hide Scores</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="gameAlert">Game Alert</string>
    <string name="gameTime">It\'s Game Time</string>
    <string name="alertMessage">This Game Will Start at</string>
    <string name="cancel">Cancel</string>
    <string name="reminder">Set Reminder</string>
    <string name="signInToComment">Sign In To Add Comment</string>
    <string name="signIn">Sign In</string>
    <string name="deleteCommentMessage">Are You Sure You Want To Delete Comment</string>
    <string name="yes">YES</string>
    <string name="commentDeleted">Comment Deleted</string>
    <string name="commentFailed">Failed To Delete Comment</string>
    <string name="addCommentFailed">Failed To Add Comment</string>
    <string name="imageUploaded">Image Uploaded</string>
    <string name="userUpdateFail">Failed to Update User info</string>
    <string name="add_new_comment">Add New Comment</string>
    <string name="explore_nba">Explore NBA</string>
    <string name="nba_tickets">NBA Tickets</string>
    <string name="nba_store" translatable="false">NBA Store</string>
</resources>